<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="camera_button_desc">Camera Button</string>
    <string name="title_activity_login">Sign in</string>
    <string name="app_intro">Think of this as a Yelp© for human interactions. We interact with others so often, it\'s nice to assign a number to how people perform at basic social functions.</string>
    <string name="how_to_use">To use this app, go about your daily life as usual. After having a conversation or interaction with a person, ask if you can rate them on this app. If they also use the app, you\'ll be able to pull up their profile by pointing your camera at their face. Once you do, give them a rating and ask for them to rate you back! It\'s most fun when everyone does it!</string>
    <string name='facial_agreement'>By using RateMe, you give us permission to upload pictures from your device for facial recognition purposes. RateMe never uses your images for any other purpose, nor does it sell your data to anyone. The service we use for facial recognition is Kairos©. Check their privacy policy for more details at www.kairos.com.</string>
    <string name='camera'>Camera</string>
    <string name='home'>Home</string>
    <string name='account'>Account</string>
    <string name="logout">Log Out</string>
    <string name="train">Train</string>
    <string name="recognize">Recognize</string>
    <string name="yourrating"><i>Your Rating:</i></string>
    <string name="rate_someone">Rate Someone</string>
    <string name="joe_shmoe">Joe Shmoe</string>
    <string name="delete_face_profile">Delete Face Profile</string>
    <string name="first_name">First Name:</string>
    <string name="submit">Submit</string>
    <string name="registration_hint">It looks like this is your first time using RateMe. We need your name so users can recognize you when they rate you!</string>
    <string name="registration_title">Who is this again?</string>
    <string name="change_name">Change name</string>
    <string name="first_name_hint">Only letters allowed</string>
    <string name="account_management">Account Management</string>
    <string name="leave_a_rating">Leave a rating!</string>
    <string name="welcome_to_rateme">Welcome to RateMe!</string>
    <string name="search_for_people_nearby">Search for people nearby</string>
    <string name="looking_for_nearby_users">Looking for nearby users...</string>
    <string name="you_are_visible_to_others_while_this_page_is_open">You are visible to others while this page is open</string>
    <string name="tap_a_user_in_the_list_to_rate_them">Tap a user in the list to rate them</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="cancel">Cancel</string>
</resources>
